--- a/zona de pruebas/Conseguir_Rutas.ipynb
+++ b/zona de pruebas/Conseguir_Rutas.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
    "source": [
     "import os\n",
     "\n",
-    "file_path = 'C:/Users/antonio.gutierrez/Documents/Layla_Sphere/database/Pptx/'\n",
+    "file_path = '/home/normama/Documentos/Laysphere/database/'\n",
     "if os.path.isfile(file_path):\n",
     "\n",
     "    print(\"El archivo existe.\")\n",
@@ -57,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
