feat: Agregé la biblioteca de Pydantic y notas en el readme

--- a/Bot_Tabantaj.ipynb
+++ b/Bot_Tabantaj.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.vectorstores import Chroma\n",
+    "from langchain.vectorstores import chroma\n",
     "from langchain.embeddings import OpenAIEmbeddings\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "from langchain.llms import OpenAI\n",
+    "from langchain.llms import openai\n",
     "from langchain.chains import RetrievalQA\n",
     "from langchain.document_loaders import TextLoader\n",
     "from langchain.document_loaders import DirectoryLoader\n",
